# psx-renderer

./: Cargo.toml  LICENSE
res/mdl/mercedes-benz-190/: mercedes-benz-190.gltf
res/mdl/psx-knight/: psx-knight.gltf
src/: camera.rs  fractional_type.rs  main.rs
src/renderer/: preferences.rs
