[package]
name = "psx-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
obj = "0.10.2"
png = "0.17.5"
rulinalg = "0.4.2"
fixed = "1.16.0"
gltf = "1.0.0"
num-traits = "0.2.15"
rand = "0.8.5"